--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Cash Register Manager</h1>
-    <p>Enter the bill amount and cash given by the customer and know minimum number of notes to return.</p>
+    <h1 class="heading">Cash Register Manager</h1>
+    <p class="description">Enter the bill amount and cash given by the customer and know minimum number of notes to return.</p>
     <div class="container">
         <label for="bill-amount">Bill Amount:</label>
         <input id="bill-amount" type="text">
@@ -45,6 +45,35 @@
         </table>
 
     </div>
+    <footer>
+        <p>© | 2021 | govardhanreddy</p>
+        <ul class="footer-list">
+            <li>
+                <a class="links" href="https://github.com/govardhanreddyc79/" target="_blank">
+                  <img src="images/github.png" alt="github" />
+                </a>
+              </li>
+              <li>
+                <a class="links" href="https://discord.com/" target="_blank">
+                  <img src="images/discord.png" alt="discord" />
+                </a>
+              </li>
+              <li>
+                <a class="links" href="https://twitter.com/reddygov16" target="_blank">
+                  <img src="images/twitter.png" alt="twitter" />
+                </a>
+              </li>
+              <li>
+                <a
+                  class="links"
+                  href="https://www.instagram.com/neogcamp"
+                  target="_blank"
+                >
+                  <img src="images/instagram.png" alt="instagram" />
+                </a>
+              </li>
+        </ul>
+    </footer>
     
 </body>
     <script src="app.js" type="text/javascript"></script>
