--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <p class="description">Enter the bill amount and cash given by the customer and know minimum number of notes to return.</p>
     <div class="container">
         <label for="bill-amount">Bill Amount:</label>
-        <input id="bill-amount" type="text">
+        <input id="bill-amount" min="0" type="number">
         <br>
         <label for="cash-given">Cash Given:</label>
-        <input id="cash-given" type="text">
+        <input id="cash-given" min="0" type="number">
 
         <button id="btn-check">Check</button>
         <p id='error-message'></p>
