modified return change table display

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <input id="cash-given" min="0" type="number">
 
         <button id="btn-check">Check</button>
-        <p id='error-message'></p>
+        <p id='display-message'></p>
         <table id="cash-return-table">
             <caption>Return Change</caption>
                 <tr>
