added linkedIn profile link

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 </a>
               </li>
               <li>
-                <a class="links" href="https://discord.com/" target="_blank">
-                  <img src="images/discord.png" alt="discord" />
+                <a class="links" href="https://www.linkedin.com/in/govardhan-reddy-1bb838136/" target="_blank">
+                  <img src="images/linkedin.png" alt="discord" />
                 </a>
               </li>
               <li>
@@ -66,7 +66,7 @@
               <li>
                 <a
                   class="links"
-                  href="https://www.instagram.com/neogcamp"
+                  href="https://www.instagram.com/cgreddy_16/"
                   target="_blank"
                 >
                   <img src="images/instagram.png" alt="instagram" />
