modified linkedin profile link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               </li>
               <li>
                 <a class="links" href="https://www.linkedin.com/in/govardhan-reddy-1bb838136/" target="_blank">
-                  <img src="images/linkedin.png" alt="discord" />
+                  <img src="images/linkedin.png" alt="linkedin" />
                 </a>
               </li>
               <li>
